--- a/src/modules/scheduling/css/sessionModal.scss
+++ b/src/modules/scheduling/css/sessionModal.scss
@@ -87,10 +87,6 @@
             overflow-y: scroll;
             padding: 0 35px;
 
-            &::-webkit-scrollbar { 
-                display: none; 
-            }
-
             form{            
                 margin: 0 auto 20px auto;
                 width: 100%;
